force-app/main/default/objects/Shipment_Error_Log__c/Shipment_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Shipment Error Log</label>
    <nameField>
        <displayFormat>SEL-{000000}</displayFormat>
        <label>Shipment Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>