force-app/main/default/objects/Shipment_Error_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipment Validation</fullName>
            </value>
            <value>
                <fullName>Order Creation</fullName>
            </value>
            <value>
                <fullName>Order Product Creation</fullName>
            </value>
            <value>
                <fullName>Shipment Calculation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>